# DistributedManageServer

./: CMakeLists.txt  README.md
bin_d/win-x86/: DistributedServerd.ilk  OrderServerd.ilk  commonModuled.ilk  sqliteppd.ilk
code/commonModule/: CMakeLists.txt  CommonDef.h  CommonTimer.cpp  CommonTimer.h  GetConfig.cpp  GetConfig.h  Log.cpp  Log.h
code/communicationModule/: CMakeLists.txt  SocketComm.hpp  TcpClient.cpp  TcpClient.h  TcpServer.h  TcpSocket.cpp  TcpSocket.h  TcpSocket.h_bak
code/databaseModule/: CMakeLists.txt
code/main/: CMakeLists.txt  main.cpp
code/simpleSockets/: CMakeLists.txt  Socket.h  Sockets-config.cpp
code/sqlitepp/: CMakeLists.txt  sqlite3pp.h
config/: config.ini
lib_d/win-x86/: commonModuled.lib
word/: 点餐系统接口文档.md
